@startuml SoDoclass
 skinparam linetype ortho
' Dịch vụ du lịch ở đây bao gồm các khu vui chơi,
' ăn ngủ nghỉ, dịch vụ đi lại, các dịch vụ sẽ có loại DV
'Dịch vụ sẽ gồm có:
'1. Phương tiện để đi lại (gồm có phương tiện đi đến nơi du lịch và phương tiện đi lại ở điểm du lịch)
'2. Tham quan 
'3.ăn uống
'4. chỗ ngủ



class NhaCungCap{
  + ncc_id: int
  + ncc_taikhoan: string
  - ncc_matkhau: string
  + ncc_ten: string
  + ncc_email: string
  + ncc_dienthoai: string
  + ncc_diachi: string
  
  ' + dangnhap()
  ' + dangxuat()
  ' + quanlyDichVu()
  ' + XemHopdong()
  ' + quanlyCamketdichvu()
  ' + capnhatThongtincanhan()
}

class DiaDiem_DuLich{
  + dddl_id: int
  + dddl_ten: string
  + dddl_hinh_duongdan: string
  + dddl_mota: string
  + dddl_tinhthanh: string
  + dddl_quanhuyen: string
}


class BaiViet_DiaDiem{
  + bvdd_id: int
  + bvdd_tieude: string
  + bvdd_noidung: string
  + bvdd_tinhtrang: boolean
  + bvdd_Hinh_duongdan: string
}

class DuKhach{
  + dk_id: int
  + dk_taikhoan: string
  - dk_matKhau: string
  + dk_hoten: string
  + dk_cmnd: string
  + dk_dienthoai: string
  + dk_diachi: string
  + dk_email: string 
  + dk_diemthanhvien: int

  ' + dangnhap()
  ' + dangxuat()
  ' + quanlyHopdong()
  ' + capnhatThongtincanhan()
  
}

class LoaiDichVu{
  + ldv_id: int
  + ldv_ten: string
  + ldv_mota: string
}

class DichVu{
  + dv_id: int
  + dv_ten: string
  + dv_dienthoai_hotro: string
  + dv_mota: string
  + dv_tb_gia: int
  + dv_tinhthanh: string
  + dv_quanhuyen: string
  + dv_hinh_duongdan: string
  + dv_tieude: string
  + dv_trungbinhchatluong: dounble
}

class CamKetDichVu{
  + ckdv_id: int
  + ckdv_noidung: string
  + ckdv_boithuong: string
}

class HopDong{
  + hd_id: int
  + hd_ngaybatdau: date
  + hd_ngayketthuc: date
  + hd_chiphi: double
  + hd_danhgiachatluong: double
  + hd_phanhoi: double
}

class NhanVien{
  + nv_id: int
  + nv_taikhoan: string
  - nv_matKhau: string
  + nv_hoten: string
  + nv_cmnd: string
  + nv_dienthoai: string
  + nv_diachi: string
  + nv_email: string 
  
  ' + dangnhap()
  ' + dangxuat()
  ' + capnhatThongtincanhan()
  ' + quanlyDiadiemdulich()
  ' + quanlyLoaidichvu()
  ' + quanlyBaivietdiadiem()
  ' + xemthongtinDukhach()
  ' + xemthongtinNhacungcap()
}


NhaCungCap "1" -- "*" DichVu
LoaiDichVu "1" -- "*" DichVu
DuKhach "1" -- "*" BaiViet_DiaDiem
DiaDiem_DuLich "1" -- "*" BaiViet_DiaDiem
NhanVien "1" -- "*" BaiViet_DiaDiem
(DuKhach, DichVu) .. HopDong
DichVu "1" -- "*" CamKetDichVu


@enduml